syntax = "proto2";

package com.example.generics.protobuf_ser;

message ChildWorkflowCocaColaInput {
  required string kind = 1;
}

message ChildWorkflowPepsiInput {
  required string kind = 1;
  required int32 volume = 2;
}

message ChildWorkflowInput {
  // NOTE: sealed_value is a special case in scalapb
  oneof sealed_value {
    ChildWorkflowCocaColaInput cocaCola = 1;
    ChildWorkflowPepsiInput pepsi = 2;
  }
}

message WorkflowCocaColaInput {
  required string kind = 1;
}

message WorkflowPepsiInput {
  required string kind = 1;
}

message WorkflowInput {
  // NOTE: sealed_value is a special case in scalapb
  oneof sealed_value {
    WorkflowCocaColaInput cocaCola = 1;
    WorkflowPepsiInput pepsi = 2;
  }
}